bill create api integration and buybill book ui and alignment issues completed

--- a/src/modules/buy_bill_book/step2.scss
+++ b/src/modules/buy_bill_book/step2.scss
@@ -3,6 +3,9 @@
         max-width: 1300px;
     }
 }
+.popup_bottom_div{
+    width: 100%!important;
+}
 .backdrop {
     display: none;
     position: fixed;
