--- a/src/modules/ledgers/buyerLedger.scss
+++ b/src/modules/ledgers/buyerLedger.scss
@@ -528,8 +528,8 @@ a:hover{
     margin: auto;
 }
 .react-datepicker-popper{
-    margin-left: 320px;
-    margin-top: -40px;
+    // margin-left: 320px;
+    // margin-top: -40px;
 }
 .react-datepicker__input-container input{
     border: none;
